[gd_scene load_steps=9 format=2]

[ext_resource path="res://nodes/egg_box/egg_box.jpg" type="Texture" id=1]
[ext_resource path="res://ui/icons/egg.png" type="Texture" id=2]
[ext_resource path="res://resources/fonts/Potato_Farmer.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://nodes/egg_box/EggBox.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 40.0374, 40.1504 )

[sub_resource type="CircleShape2D" id=1]
radius = 76.6731

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
resource_name = "hint"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Hint:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.6 ),
"transitions": PoolRealArray( 0.5, 1, 0.5 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -19.0885 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hint:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="EggBox" type="Area2D" groups=[
"bullet_traversable",
]]
script = ExtResource( 4 )

[node name="StaticBody" type="StaticBody2D" parent="."]

[node name="Hitbox" type="CollisionShape2D" parent="StaticBody"]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.362944, 0.362944 )
texture = ExtResource( 1 )

[node name="Icon" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 1.27999, 1.27999 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hint" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0 )

[node name="Label" type="Label" parent="Hint"]
margin_left = -21.5604
margin_top = -74.4346
margin_right = 18.4396
margin_bottom = -28.4346
custom_fonts/font = SubResource( 2 )
text = "+3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Anim" type="AnimationPlayer" parent="."]
anims/hint = SubResource( 3 )

[node name="RefuelCooldown" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_EggBox_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_EggBox_body_exited"]
[connection signal="timeout" from="RefuelCooldown" to="." method="_on_RefuelCooldown_timeout"]
